--- a/src/index.html
+++ b/src/index.html
@@ -5,37 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Music Store</title>
-    <link rel="stylesheet" href="styles/bootstrap.min.css">
+    <title>Webpage Title</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <div class="jumbotron">
-            <h1 class="display-4">Music Store</h1>
-        </div>
-        <div class="row">
-            <div class="col-md-4"><img src="images/Album.gif" alt="The Album Cover" class="img-fluid"></div>
-            <div class="col-md-8">
-                <h2>Album Title</h2>
-                <h2>Artist</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, culpa delectus totam incidunt
-                    perspiciatis omnis velit qui nostrum voluptates illum nobis quod quasi ipsum dolorem eum nam aut ab
-                    eos?</p>
-            </div>
-        </div>
-        <div class='row'>
-            <div class='col-md-6 col-xs-push-12 col-xs-12'>DETAILS</div>
-            <div class='col-md-6 col-xs-pull-6 col-xs-12'>LOGO</div>
-        </div>
+    <div class="container">
+        <h1 class="d-3">Everything works</h1>
     </div>
     <script src="scripts/index.js"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 </body>
 
 </html>
